Additional improvements